--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,26 +17,37 @@
 </head>
 
 <body>
-<script type=text/javascript src="{{url_for('static', filename='js/main.js') }}"></script>
+<!-- <script type=text/javascript src="{{url_for('static', filename='js/main.js') }}"></script> -->
 <div id="wholeContainer">    
     <p id="Hello">Welcome Sabrina!<p>
     <div id="allHabitsContainer">
         <p>What things are you going to accomplish this week?</p><br>
         <div id="habitWrite">
-            <form action = "http://127.0.0.1:5000/todo" method="post">
+            <div class="formwrapper">
+                
+                <form method="POST" action="/">
+                 <div class="form-field"> {{ form.hidden_tag() }} {{ form.habit.label }} {{ form.habit(size=20) }}</div>
+                    <div class="form-field">{{ form.goal.label }} {{ form.goal }}</div>
+                    {{ form.submit }}
+                    </div>
+                </form>
+            </div> 
+            
+            <!--    <form action = "http://127.0.0.1:5000/todo" method="post">
                 <label for="habit">Habit:</label>
                 <input type="text" id="habit" name="habit">
                 <label for="goal">Goal:</label>
                 <input type="text" id="goal" name="goal">
                 <button class="btn-lg btn-success btn-floating" id="quantityButton"> <i class="fas fa-plus"></i> </button>
-            </form>
+            </form> 
+            -->
         </div> 
         <br>
-        <div id="habitSaved">
+        <div id="habitSaved"> <!-- 
             <p id="habit2">Habit: {{ habit }}   Goal: {{ goal }}  Status:   <div id="status">Not Started</div><button id="count" onclick="addOne(this)" class="btn-lg btn-info btn-floating">0</button></p>
-        </div><br>
+        </div><br> -->
     </div>
-</div>
+</div> 
 <script src="https://kit.fontawesome.com/39992b1e55.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
